--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Amigo Secreto</title>
 </head>
-
+<script src="edicion/amigo.js"></script>
 <body>
     <main class="main-content">
         <header class="header-banner">
@@ -37,5 +37,6 @@
     </main>
 
     <script src="app.js" defer></script>
+    <script src="edicion/amigo.js"></script>
 </body>
 </html>
